--- a/代码思路.md
+++ b/代码思路.md
@@ -1,4 +1,4 @@
-# 埃德加·考特派代码思路-崔峻豪-电子科技大学 #
+# 埃德加·考特派代码思路-cjh-电子科技大学 #
 
 ## 第一阶段比赛 ##
 第一阶段的比赛为小数据量并且只需要通过即可不需要考虑运行时间和内存的因素，所以仅需要把第二阶段的代码复制上去，改一下数据路径即可，所以主要说明第二阶段的代码。
